@SET_MAKE@

docsubdir = @docdir@/methods
docsub_DATA = \
	SMBdirent.html \
	SmbAnswerCallback.html \
	append.html \
	buildURL.html \
	close.html \
	closedir.html \
	creat.html \
	flush.html \
	fstat.html \
	gethostbyname.html \
	lseek.html \
	mkdir.html \
	open.html \
	opendir.html \
	parse.html \
	read.html \
	readdir.html \
	rename.html \
	rewinddir.html \
	rmdir.html \
	setCharSet.html \
	setDefaultBrowseServer.html \
	setDefaultUser.html \
	setPasswordCallback.html \
	stat.html \
	unlink.html \
	write.html

EXTRA_DIST = $(docsub_DATA)
